--- a/_posts/2019-07-07-the-us-narrative-today.html
+++ b/_posts/2019-07-07-the-us-narrative-today.html
@@ -1641,107 +1641,107 @@ stories:
   domain: http://www.news-banner.com/
   link: https://news-banner.com/2019/07/markle-boy-scouts-to-retire-flags/
 images:
-- name: sand-hand-sand-hand-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-circuit-4.jpg
-- name: old-church-oldchurch-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-kand-two.jpg
-- name: lincoln-memorial-lincolnmemorial-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-alien-goggles.jpg
-- name: oldtrain-oldtrain-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-sunday.jpg
-- name: aws-s3-stories-new-72-124-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-72-124-800-500-0-max-0--1--1.jpg
-- name: walled-garden-walled-garden-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-post-modern.jpg
-- name: rain-princess-DSC_0102.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0102.jpg
-- name: white-house-whitehouse-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-sunday.jpg
-- name: gypsymosaic-gypsy-eyes-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-gan-vogh.jpg
-- name: fence-mexico-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-space-pizza.jpg
+- name: oldhouse-granaryfield-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-creativity.jpg
+- name: power-lines-power-lines-empty-space-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-alien-goggles.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-monet-one.jpg
+- name: nyc-flag-nycflag-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-smoking-cigarette.jpg
+- name: yosemite-yosemite-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-crunch-paper.jpg
+- name: dc-statue-dcstatue-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-atari-missle.jpg
+- name: school-clouds-church-clouds-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-circuit-4.jpg
+- name: border-fence-border-fence-on-hill-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-atari-asteroids.jpg
+- name: stories-legalstatue-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-legalstatue-light-dali.jpg
+- name: mosaic-face-mosaic-face-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-purple-storm.jpg
+- name: server-racks-clouds-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds-blue-circuit.jpg
+- name: meadowbutterfly-meadow-butterfly-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-far-away.jpg
+- name: crow_dark_rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_rain.jpg
+- name: fence-mexico-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-marcel-duchamp.jpg
+- name: old-house-oldhouse-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-yellow-collage.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-umberto-bocc.jpg
+- name: razorwire-DSC-0080-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dark-dali.jpg
+- name: sand-hand-sand-hand-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-attack-planes.jpg
+- name: school-clouds-church-clouds-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-copper-circuit-2.jpg
+- name: locked-up-steam-lock-up-steam-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-post-modern.jpg
+- name: cyber-api-description-wars-api-specification-wars.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-api-specification-wars.png
+- name: hollywood-building-hollywood-building-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-electricity.jpg
+- name: art-museum-art-museum-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-granite.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory.jpg
+- name: oldhotel-oldhotel-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-crafty-painting.jpg
+- name: old-house-oldhouse-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-pablo-blue.jpg
+- name: gypsy-wagon-gypsywagon-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-far-away.jpg
+- name: beach-clouds-lifeguard-beachclouds-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-ww2-dresden.jpg
+- name: docks-docks-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-atari-asteroids.jpg
+- name: docks-docks-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-copper-circuit-2.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-pablo-blue.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-pablo-blue.JPG
+- name: oldroad-old-road-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-clean-view.jpg
+- name: san-francisco-street-view-san-francisco-street-view-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-deep-connections.jpg
+- name: ellis-island-ellis-island-room-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dali-two.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-dark-dali.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dark-dali.png
+- name: store-on-corner-store-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dali-three.jpg
 - name: beach-rocks-beach-rocks-currents-purp-paper.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-purp-paper.jpg
-- name: oldcabin-oldcabin-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-atari-asteroids.jpg
-- name: stories-new-32-119-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-32-119-800-500-0-max-0--1--1.jpg
-- name: art-museum-art-museum-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-crunch-paper.jpg
-- name: border-crossing-bordercrossing-gred-mash.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-gred-mash.png
-- name: cargo-ship-cargo-ship-on-sea-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-really-hot.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dali-three.jpg
-- name: liberty-back-statue-liberty-back-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-satan-red.jpg
-- name: walled-garden-walled-garden-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-smooth-ride.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-really-hot.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-really-hot.JPG
-- name: christianity-christianity-under-construction-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-oily-mcoilface.jpg
-- name: flower-barbed-wire-flower-barbed-wire-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-ww2-color.jpg
-- name: gypsymosaic-gypsy-eyes-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-mucha-mult.jpg
-- name: cargo-ship-cargo-ship-on-sea-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-yellow-paper.jpg
-- name: miamibeach-miamibeach-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-nazi-poster.jpg
-- name: berlinwall2-berlinwall-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-atari-missle.jpg
-- name: aws-s3-square-castle-on-hill-edinburgh-blue-circuit-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-castle-on-hill-edinburgh-blue-circuit-square.jpg
-- name: old-granary-field-oldhouse-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-pablo-blue.jpg
-- name: yosemite-yosemite-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-clean-view.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-horiz-circuit.jpg
-- name: 35201856153_61bc075e4b-wreck.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-wreck.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-hot-spicy.jpg
-- name: copper-circuit-DSC_0044-001.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0044-001.jpg
-- name: aws-s3-square-fredericksburg-downtown-flag-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-fredericksburg-downtown-flag-square.jpg
-- name: wind-mills-windmills-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-kandinsky-bv.jpg
-- name: containership-containership-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-purple-storm.jpg
-- name: old-granary-field-granaryfield-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-colorful-dream.jpg
-- name: sand-hand-sand-hand-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-matrix.jpg
-- name: rain-princess-DSC_0015.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0015.jpg
-- name: yosemite-yosemite-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dark-soul.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-ww2-color.jpg
-- name: legal-statue-legalstatue-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-far-away.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-creativity.jpg
-- name: bluelake-green-zuma-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-green-zuma-file-00-00-00-00.jpg
-- name: eduardo-eduardo-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dry-skin.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-horiz-circuit.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-hot-spicy.jpg
-- name: razorcliff-razorcliff-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-deep-connections.jpg
-- name: windowmountain-window-mountain-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-aqua.jpg
-- name: beach-clouds-lifeguard-beachclouds-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-kandinsky-bv.jpg
-- name: crow_green_zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_green_zuma.jpg
+- name: berlinwall2-berlinwall-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-crabapple.jpg
+- name: white-house-lawn-white-house-window-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-blue-electricity.jpg
+- name: capital-battle-capitolbattle-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-sunday.jpg
+- name: hollywood-building-hollywood-building-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-gred-mash.jpg
+- name: cargo-ship-cargo-ship-on-sea-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-ww2-dresden.jpg
+- name: nazi-invasion-DSC_0062.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0062.jpg
+- name: berlinwall2-berlinwall-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-ww2-dresden.jpg
+- name: containership-containership-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-free-woman.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-wols.jpg
+- name: death-valley-death-valley-national-park-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-green-zuma.jpg
+- name: flower-barbed-wire-flower-barbed-wire-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-granite.jpg
+- name: crow-crow-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-atari-missle.jpg
+- name: oldcabin-store-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-rainbow-festival.jpg
+- name: oldbarn-oldbarn-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-atari-asteroids.jpg
 ---
 Main Street Hancock Group Takes Shape With Second Meeting.&nbsp;Daughters Of The American Revolution Honor Two Bixby Students.&nbsp;Kids Parade Kick Starts Fourth Of July Celebration In Charles City.&nbsp;The Ongoing Saga Of A Girl And Her Scale.&nbsp;Local Flood Victims Can Apply For Disaster Assistance Low Interest Loans.&nbsp;On The Eve Of Deployment, A 5K Farewell For Local Veteran.&nbsp;America's Freedom Fest Draws Thousands.&nbsp;Changing The Lives Of Children With Special Needs.&nbsp;
